--- a/views/create.ejs
+++ b/views/create.ejs
@@ -21,21 +21,21 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="start_date" class="col-sm-2 control-label">Email Address</label>
+    <label for="start_date" class="col-sm-2 control-label">Start Date</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
+      <input type="text" class="form-control" id="start_date" name="start_date" placeholder="YYYY-MM-DD" required>
     </div>
   </div>
   <div class="form-group">
     <label for="gpa" class="col-sm-2 control-label">GPA</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="gpa" name="gpa" placeholder="4.0">
+      <input type="text" class="form-control" id="gpa" name="gpa" placeholder="0 - 4.0">
     </div>
   </div>
   <div class="form-group">
     <label for="sat" class="col-sm-2 control-label">SAT Score</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="sat" name="sat" placeholder="1400">
+      <input type="text" class="form-control" id="sat" name="sat" placeholder="400 - 1400">
     </div>
   </div>
   <div class="form-group">
