--- a/views/update.ejs
+++ b/views/update.ejs
@@ -9,14 +9,15 @@
 <form action="#" method="">
   <div class="form-group">
     <label for="employeeId">SELECT AN STUDENT TO UPDATE</label><br/>
-    <select id="employeeId" name="employeeId">
-    <% if(typeof students != "undefined" && students.length > 0){ %>
-      <% students.forEach(function(student){ %>
-        <option value="<%= student.student_id %>">
-          <%= student.last_name + ", " +  student.first_name %>
-        </option>
-      <% }) %>
-    <% } %>
+    <select id="employeeId" name="employeeId" class="selectpicker" data-live-search="true" data-header="Select a student">
+      <option value=""></option>
+        <% if(typeof students != "undefined" && students.length > 0){ %>
+          <% students.forEach(function(student){ %>
+            <option value="<%= student.student_id %>" data-icon="glyphicon glyphicon-user">
+              <%= student.last_name + ", " +  student.first_name %>
+            </option>
+          <% }) %>
+        <% } %>
     </select>
   </div>
 </form>
@@ -37,9 +38,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="start_date" class="col-sm-2 control-label">Email Address</label>
+    <label for="start_date" class="col-sm-2 control-label">Start Date</label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
+      <input type="dateISO" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
     </div>
   </div>
   <div class="form-group">
@@ -62,7 +63,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Update Student</button>
+      <button type="submit" class="btn btn-default submit">Update Student</button>
     </div>
   </div>
 </form>
