Remove major ID association

--- a/views/read.ejs
+++ b/views/read.ejs
@@ -29,7 +29,7 @@
         <td><%= student.start_date %></td>
         <td><%= student.gpa %></td>
         <td><%= student.sat %></td>
-        <td><%= student.hasOwnProperty('major_id') ? student.major_id.major : "" %></td>
+        <td><%= student.major_id %></td>
       </tr>
     <% }) %>
   <% } %>
